<resources>
    <string name="app_name">ReadMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="nick">nick:</string>
    <string name="name">name:</string>
    <string name="logintext">Войдите в уже существующий аккаунт или создайте новый, чтобы иметь возможность отмечать понравившиеся тексты</string>
    <string name="sing_in">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="ellipsis">...</string>
    <string name="best_texts">Лучшие тексты за неделю:</string>
    <string name="send">Send</string>
    <string name="name_settings">Имя</string>
    <string name="change_name">Изменить имя пользователя:</string>
    <string name="night_theme">Темная тема:</string>
</resources>