<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="?attr/itemTextAppearance"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/night_theme"
                android:textColor="?attr/textAppearanceHeadline2"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textSize="22sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTheme"
                android:layout_weight="0"
                style="@style/StyleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewSettingsLine1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="?attr/colorSecondaryVariant" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="?attr/textAppearanceHeadline2"
                    android:text="@string/change_name"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextSettingsPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:ems="10"
                        android:hint="@string/name_settings"
                        android:layout_weight="1"
                        android:autofillHints="username"
                        android:inputType="textPersonName"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/imageButtonName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:padding="20dp"
                        android:contentDescription="@string/send"
                        android:src="@drawable/ic_baseline_send_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="?attr/textAppearanceHeadline2"
                    android:text="Изменить Email:"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextSettingsPersonEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:ems="10"
                        android:hint="Email"
                        android:layout_weight="1"
                        android:inputType="textPersonName"
                        android:textSize="20dp" />

                    <ImageButton
                        android:id="@+id/imageButtonEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:padding="20dp"
                        android:src="@drawable/ic_baseline_send_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="?attr/textAppearanceHeadline2"
                    android:text="Изменить пароль:"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/editTextSettingsPersonPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="3dp"
                            android:ems="10"
                            android:hint="Пароль"
                            android:inputType="textPersonName"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/editTextSettingsPersonPasswordConform"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="3dp"
                            android:ems="10"
                            android:hint="Подтвердите пароль"
                            android:inputType="textPersonName"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButtonPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:padding="20dp"
                        android:layout_gravity="bottom"
                        android:src="@drawable/ic_baseline_send_24" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>